<?xml version="1.0"?>
<package format="3">
  <name>tier4_calibration_tools_launcher</name>
  <version>0.1.0</version>
  <description>The tier4_calibration_tools_launcher package</description>

  <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
